<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<include layout="@layout/toolbar_detail" />-->

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/poster_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/original_title"
                            style="@style/movie_title" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/filed_release_date"
                                style="@style/movie_detail"
                                android:text="@string/movie_detail_released" />

                            <TextView
                                android:id="@+id/release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/filed_release_date" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/field_runtime"
                                style="@style/movie_detail"
                                android:text="@string/movie_detail_runtime"

                                />

                            <TextView
                                android:id="@+id/runtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/field_runtime" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/average_vote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableLeft="@drawable/ic_star_black_48dp"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="vertical">

                    <TextView
                        style="@style/movie_detail"
                        android:text="@string/movie_detail_overview" />

                    <TextView
                        android:id="@+id/overview"
                        style="@style/movie_overview"
                        android:onClick="expandOverview" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/field_genre"
                            style="@style/movie_detail"
                            android:text="@string/movie_detail_genre" />

                        <TextView
                            android:id="@+id/genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/field_genre" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/field_countries"
                            style="@style/movie_detail"
                            android:text="@string/movie_detail_countries" />

                        <TextView
                            android:id="@+id/countries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/field_countries" />
                    </RelativeLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="vertical">

                    <TextView
                        style="@style/movie_detail"
                        android:text="@string/movie_detail_videos" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvVideos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="128dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="vertical">

                    <TextView
                        style="@style/movie_detail"
                        android:text="@string/movie_detail_reviews" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rvReviews"
                        android:minHeight="128dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBtnFav"
        style="@style/floating_action_button"
        android:src="@drawable/ic_favorite_white_48dp"
        app:fabSize="normal"
        app:layout_anchor="@id/detailToolbar"
        app:layout_anchorGravity="bottom|right|end"
        />
</android.support.design.widget.CoordinatorLayout>
